[package]
name = "dev_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.25.0", features = ["serde", "persistence"] }
dirs = "5.0.1"
env_logger = "0.11.0"
once_cell = "1.19.0"
anyhow = "1"
nom = "7.1.3"
jsonwebtoken = "9.2.0"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...' # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
