[package]
name = "dev_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.29.0", features = ["serde", "persistence"] }
# egui = { version = "0.19", features = ["tracing"] }
dirs = "5.0.1"
env_logger = "0.11.0"
once_cell = "1.19.0"
anyhow = "1"
nom = "7.1.3"
jsonwebtoken = "9.2.0"
image = "0.24"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.9", features = ["image", "cursor", "resource_manager"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.7.0"
arboard = "3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2", features = ["exception"] }
core-graphics = { version = "0.23.1" }

[dev-dependencies]
tempfile = "3.9.0"


# [profile.dev]
# opt-level = 0
# debug = true
# split-debuginfo = '...' # Platform-specific.
# debug-assertions = true
# overflow-checks = true
# lto = false
# panic = 'unwind'
# incremental = true
# codegen-units = 256
# rpath = false
#
# [profile.release]
# # rustflags = ["-Awarnings"]
# opt-level = 3
# debug = false
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = false
# overflow-checks = false
# lto = false
# panic = 'unwind'
# incremental = false
# codegen-units = 1
# rpath = false
