[package]
name = "dev-tools-rs"
version = "0.2.0"
edition = "2021"
authors = ["Neo <chojs990222@gmail.com>"]
description = "A collection of QoL tools for development inspired by the Developer Tools IntelliJ Plugin, built with Rust and egui"
license = "MIT"
repository = "https://github.com/chojs23/dev-tools-rs"
homepage = "https://github.com/chojs23/dev-tools-rs"
documentation = "https://github.com/chojs23/dev-tools-rs"
readme = "README.md"
keywords = ["developer-tools", "utilities", "gui", "egui", "rust"]
categories = ["command-line-utilities", "development-tools", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.31.0", features = ["serde", "persistence"] }
image = "0.25.6"
dirs = "6.0.0"
env_logger = "0.11.0"
once_cell = "1.19.0"
anyhow = "1"
nom = "7.1.3"
jsonwebtoken = "9.2.0"
base32 = "0.5.1"
base64 = "0.22.1"
url = "2.4"
regex = "1.10"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# ID and password generation
uuid = { version = "1.0", features = ["v4", "serde"] }
ulid = "1.0"
nanoid = "0.4"
rand = "0.8"

# Date and time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Cryptography dependencies
aes = "0.8"
des = "0.8"
cbc = "0.1"
ecb = "0.1"
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
sha2 = "0.10"
rand_core = "0.9.3"
cipher = { version = "0.4", features = ["std"] }
block-modes = "0.9"


# [target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.9", features = ["image", "cursor", "resource_manager"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.9.0"
arboard = "3.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2.7", features = ["exception"] }
core-graphics = { version = "0.25.0" }

[dev-dependencies]
tempfile = "3.9.0"


[profile.dev]
opt-level = 0
debug = true
# split-debuginfo = 'packed' # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = 'packed'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
